--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   </div>
 
   <div>
-   <div><textarea id="review" rows="20" cols="100"></textarea></div>
-   <div id="results"></div>
-   <div id="status"></div>
+   <div><textarea id="textbox" rows="20" cols="100"></textarea></div>
+   <div id="results"></div>>
   </div>
 
 
