--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -41,4 +41,5 @@
     -->
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/brain.js/2.0.0-beta.15/browser.js" integrity="sha512-zmIC+dyrpMIAVF9y5cMnHc0fK+4JBbLmW1cv/HlTdKNfXLR5KM/CLGzUfHoOSky1twW11Xi/o9rlptuPcFWpHw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </html>
